# uni-kodo

./: .gitignore
l11i12/: meson.build
l11i12/src/: analyzer.cpp  coder.cpp  main.cpp  meson.build  moje_tga.hpp
l11i12/src/coding/: jpg_coders.hpp  quants.hpp
l11i12/src/utils/: args_helper.hpp  time_it.hpp
l11i12/tests/: tga_header.cpp
l13i14/: meson.build
l13i14/src/: dekoder.cpp  hamming.hpp  koder.cpp  meson.build  sprawdz.cpp  szum.cpp
l13i14/src/utils/: misc.hpp  vector_streams.hpp
l13i14/tests/: meson.build  symptomy.cpp
l1i2/: Makefile  algo.hpp  entropia  entropia.cpp  files.hpp  time_it.hpp
l3i4/: meson.build
l3i4/src/: acs.hpp  main.cpp  meson.build
l3i4/src/acs/: acs.hpp  adaptive_model.hpp
l3i4/src/utils/: args_helper.hpp  stream_vector.hpp  time_it.hpp
l5i6/: meson.build  uruchom.sh
l5i6/src/: acs.hpp  lzw.hpp  main.cpp  meson.build
l5i6/src/coding/: acs.hpp  lzw.hpp  misc.hpp  natural.hpp  statistics.hpp
l5i6/src/utils/: args_helper.hpp  vector_streams.hpp
l5i6/test/: args.cpp  elias_delta.cpp  elias_gamma.cpp  elias_omega.cpp  meson.build  natural_fibonacci.cpp
l7i8/: meson.build
l7i8/src/: jpg_coders.hpp  main.cpp  meson.build  moje_tga.hpp
l9i10/: meson.build
l9i10/src/: jpg_coders.hpp  main.cpp  meson.build  moje_tga.hpp
l9i10/src/coding/: graphics_statistics.hpp  jpg_coders.hpp  lzw.hpp  natural.hpp  quantization.hpp
l9i10/tests/: meson.build
